<package format="2">
    <name>zed_projector</name>
    <version>0.1.0</version>
    <description>Projects a ZED stereo camera to a bird's eye view.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/goat</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
</package>
